--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>学生日程管理系统</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <RouterView />
+    </div>
     <script type="module" src="/src/client/main.ts"></script>
   </body>
 </html>
